--- a/css/styles.css
+++ b/css/styles.css
@@ -10,3 +10,47 @@ body {
   font-family: 'Montserrat', sans-serif;
   overflow-x: hidden;
 }
+
+.wrapper {
+  width: 100vw;
+  height: 100vh;
+  background-color: #191c32;
+  color: #fff;
+}
+
+.navbar{
+  display: flex;
+  justify-content: space-between;
+  padding: 2em;
+}
+
+.brand{
+  margin-top: -7px;
+}
+.brand span{
+  color:aqua;
+}
+
+.menu{
+  display: flex;
+  width: 50%;
+  justify-content: space-around;
+}
+.menu li{
+  list-style: none;
+}
+.menu a{
+  color: #fff;
+  text-decoration: none;
+  padding: 10px 20px;
+}
+
+.menu .active{
+  color: aqua;
+}
+
+.menu a:hover{
+  background-color: aqua;
+  color:#191c32;
+  transition: ease-in .4s;
+}
