--- a/css/styles.css
+++ b/css/styles.css
@@ -54,3 +54,234 @@ body {
   color:#191c32;
   transition: ease-in .4s;
 }
+.main {
+  margin: 0 auto;
+  width: 80vw;
+  height: 80vh;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  align-items: center;
+}
+h1 {
+  font-size: 3em;
+}
+span {
+  color: aqua;
+}
+.download-cv{
+  padding: 10px 20px;
+  background-color: aqua;
+  border: none;
+  border-radius: 20px;
+  margin-top: 10px;
+  cursor: pointer;
+  box-shadow: 1px 3px 11px -5px rgba(102, 231, 200, 0.69);
+}
+.download-cv:hover{
+  background-color: #fff;
+  box-shadow: none;
+}
+
+.main img{
+  width: 350px;
+  border: 5px solid aqua;
+  height: 520px;
+}
+.about {
+  display: grid;
+  grid-template-columns: repeat(10,1fr);
+  width: 100vw;
+  align-items: center;
+}
+
+.about img {
+  width: 100%;
+  grid-column: 1/5;
+}
+
+.about-info {
+  grid-column: 5/10;
+  padding: 3em;
+}
+
+.about-info h2 {
+  font-size: 2em;
+  color:#191c32;
+}
+
+.divider {
+  height: 4px;
+  width: 60px;
+  background-color: aqua;
+  margin-top: 5px;
+  margin-bottom: 2em;
+}
+
+.about p {
+  margin-bottom: 1em;
+}
+
+.portfolio{
+  width: 100vw;
+  background-color: #191c32;
+  color: #fff;
+}
+.portfolio-headings{
+  width: 100vw;
+  padding: 5em;
+}
+
+.portfolio-headings h2 {
+  font-size: 2.5em;
+}
+
+.portfolio .container{
+  width: 80vw;
+  height: 80vh;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+}
+
+.card{
+  width: 300px;
+  color: #fff;
+  height: 350px;
+  background-color: #101e4b;
+  margin: 1em;
+  border-radius: 1em;
+  
+}
+
+.card__img{
+  width: 100%;
+  height: 150px;
+  background-image: url(../img/2-original.png);
+  background-size: cover;
+  border-radius: 0.5em;
+}
+
+.card__title{
+  padding: 20px;
+}
+
+.card__projects-links{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.card__projects-links a{
+  color: #fff;
+  text-decoration: none;
+}
+
+.card__projects-links i{
+  font-size: 1.5em;
+}
+
+.card .project-details{
+  margin: 0 auto;
+  margin: 1em;
+  width: 70%;
+}
+
+.card .project-details a{
+  text-decoration: none;
+  color:#191c32;
+  text-transform: uppercase;
+}
+
+.proyect-details-content{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin-top: 1em;
+}
+
+
+.contact-headings h2{
+font-size: 3em;
+}
+.container-contact{
+  
+  padding: 3em;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  align-items: center;
+}
+.container-contact img{
+  height: 700px;
+  bottom: 0px;
+  border-radius: 1em;
+  opacity: 50%;
+}
+
+.form{
+  display: flex;
+  flex-direction: column;
+  width: 30vw;
+  margin-top: 2em;
+}
+.form input {
+  padding: 10px 20px;
+  margin-bottom: 1em;
+  background: none;
+  border-bottom: 1px solid #fff;
+  color:#fff;
+}
+
+.form textarea{
+  height: 150px;
+  background: none;
+  color:#fff;
+  padding: 1.5em;
+  border: 1px solid #fff;
+}
+.btn-submit{
+  padding: 10px 20px;
+  margin: 1em;
+  border: none;
+  text-transform: uppercase;
+  background-color: aqua;
+  border-radius: 20px;
+  cursor: pointer;
+  box-shadow: 1px 3px 11px -5px rgba(102, 231, 200, 0.69);
+}
+
+.btn-submit:hover{
+  background-color: #fff;
+  box-shadow: none;
+}
+
+.footer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 200px;
+  background-color: aqua;
+}
+
+.footer-content h2{
+  font-size: 3em;
+}
+
+.footer-content h5,
+.sotoañ-netwoek i{
+  font-size: 1.5em;
+  
+}
+
+.sotial-network{
+  display: flex;
+  justify-content: space-evenly;
+  width: 300px;
+  margin-top: 1em;
+  font-size: 2em;
+}
+
+.sotial-network a{
+  color:#191c32;
+}
